REGRESSION(52819?): AXLoadComplete and AXLayoutComplete causes 4 tests fail on Snow Leopard Debug bot https://bugs.webkit.org/show_bug.cgi?id=33300

Reviewed by Eric Seidel.

WebCore:

* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilitySetPostedNotificationCallback:withContext:]):
(-[AccessibilityObjectWrapper accessibilityPostedNotification:]):

WebKitTools:

* DumpRenderTree/AccessibilityUIElement.h:
* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::AccessibilityUIElement):
(AccessibilityUIElement::~AccessibilityUIElement):
(_accessibilityNotificationCallback):
(AccessibilityUIElement::addNotificationListener):

LayoutTests:

* platform/mac/Skipped:



Canonical link: https://commits.webkit.org/44406@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52994 268f45cc-cd09-0410-ab3c-d52691b4dbfc