WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -164,6 +164,7 @@ private:
     static JSClassRef getJSClass();
 
     PlatformUIElement m_element;
+    JSObjectRef m_notificationFunctionCallback;
 };
 
 #endif // AccessibilityUIElement_h
